@@ -18,6 +18,7 @@ namespace cqlsh.Commands
     using System.Collections.Generic;
     using System.Threading.Tasks;
     using CassandraSharp;
+    using CassandraSharp.CQL;
     using CassandraSharp.CQLPropertyBag;
 
     internal class CqlStatement : ICommand
@@ -31,6 +32,9 @@ namespace cqlsh.Commands
 
         public void Execute()
         {
+            //Task<IPreparedQuery> prepared = CommandContext.Instance.Cluster.Prepare(_statement);
+            //Task<IEnumerable<Dictionary<string, object>>> res = prepared.Result.Execute<Dictionary<string, object>>(ConsistencyLevel.QUORUM);
+
             Task<IEnumerable<Dictionary<string, object>>> res = CommandContext.Instance.Cluster.Execute(_statement, ConsistencyLevel.QUORUM);
             CommandContext.Instance.ResultWriter.Write(res.Result);
         }
